--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,8 @@ certifi==2024.2.2
 charset-normalizer==3.3.2
 Django
 idna==3.7
-instaloader
 requests==2.32.3
 sqlparse==0.5.0
 urllib3==2.2.1
+
+git+https://github.com/instaloader/instaloader.git@upcoming/v4.15
